Fix Code getting cut off

--- a/src/index.css
+++ b/src/index.css
@@ -233,6 +233,7 @@ body {
     margin: 0 auto;
     padding-top: 0;
     line-height: 25px;
+    margin-bottom: 3%;
   }
 
   .btn-login {
